# diagrams-svg-virtual-hom

./: LICENSE  README.md  diagrams-svg-virtual-hom.cabal  stack.yaml
src/Diagrams/Backend/: VirtualHom.hs
src/Graphics/Rendering/: VirtualHomSVG.hs
