Name:                diagrams-svg-virtual-hom
Version:             0.1.0.0
Synopsis:            Virtual-hom SVG backend for diagrams drawing EDSL.
Homepage:            https://github.com/j-mueller/diagrams-svg-virtual-hom
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README.md
Author:              Jann Mueller
Bug-reports:         https://github.com/j-mueller/diagrams-svg-virtual-hom/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC == 7.10.2, GHC == 8.0.1

Source-repository head
  type:     git
  location: https://github.com/j-mueller/diagrams-svg-virtual-hom

Library
  Exposed-modules:     Diagrams.Backend.VirtualHom
  Other-modules:       Graphics.Rendering.VirtualHomSVG
  Hs-source-dirs:      src
  Build-depends:       base                 >= 4.3   && < 4.10
                     , diagrams-core        >= 1.3   && < 1.4

  Ghc-options:         -Wall

  Default-language:  Haskell2010
